// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation basic render: renders <Navigation/> as a child 1`] = `
<SideNav
  activeItemId=""
  activePredicate={null}
  items={
    Array [
      Object {
        "subNav": Array [
          Object {
            "itemId": "#level1.1.2",
            "subNav": Array [
              Object {
                "itemId": "#level1.1.2.2",
                "title": "Light",
              },
            ],
            "title": "Shades",
          },
        ],
        "title": "Colors",
      },
      Object {
        "itemId": "#level1.2",
        "title": "Sizing",
      },
      Object {
        "itemId": "#level1.3",
        "title": "Typography",
      },
    ]
  }
  mapItem={null}
  onChange={[Function]}
  overrides={Object {}}
/>
`;

exports[`Navigation basic render: renders <StatefulContainer/> 1`] = `
<StatefulContainer
  initialState={Object {}}
  items={
    Array [
      Object {
        "subNav": Array [
          Object {
            "itemId": "#level1.1.2",
            "subNav": Array [
              Object {
                "itemId": "#level1.1.2.2",
                "title": "Light",
              },
            ],
            "title": "Shades",
          },
        ],
        "title": "Colors",
      },
      Object {
        "itemId": "#level1.2",
        "title": "Sizing",
      },
      Object {
        "itemId": "#level1.3",
        "title": "Typography",
      },
    ]
  }
  onChange={[MockFunction]}
  stateReducer={[Function]}
>
  <Component />
</StatefulContainer>
`;
